ioscalculator/css/styles.css
:root {
    --clr-scrollbar-thumb: black;

    --clr-body-background: #312c3d;
    --clr-calc-background: black;

    --clr-text-light: white;
    --clr-text-dark: black;

    --clr-button-numeric: #333333;
    --clr-button-functional: #a5a5a5;
    --clr-button-operator: #ff9f0a;

    --clr-button-numeric-hover: #3d3d3d;
    --clr-button-functional-hover: #c9c9c9;
    --clr-button-operator-hover: #f8ba0e;

    --clr-button-numeric-active: #7e7e7e;
    --clr-button-functional-active: white;
    --clr-button-operator-active: white;

    --button-diameter: 85px;
    --scrollbar-height: 6px; /* Only for Chromium */
}

body {
    font-family: Roboto, Arial, Helvetica, sans-serif;
    background-color: var(--clr-body-background);
    margin: 1rem 0;
}

.wrapper {
    display: grid;
    grid-template-columns: 400px;
    grid-template-rows: 340px 500px;
    margin: 0 auto;
    width: fit-content;
    padding: 0 1.3rem 5rem 1.3rem;
    background-color: var(--clr-calc-background);
    border-radius: 60px;
}

.screen {
    grid-row: span 1;
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
    color: var(--clr-text-light);
    font-size: 6rem;
    font-weight: 300;
    margin: 100px 25px 0 25px;
}

.screen-text {
    overflow-x: scroll;
    transition: font-size 0.4s, scrollbar-color 0.4s;
    /* Firefox scrollbar styling */
    scrollbar-color: var(--clr-calc-background) var(--clr-calc-background);
    scrollbar-width: thin;
}

.screen-text.visible-scrollbar {
    scrollbar-color: var(--clr-button-numeric) var(--clr-calc-background);
}

/* Chrome scrollbar styling */
.screen-text::-webkit-scrollbar {
    background-color: black;
    height: var(--scrollbar-height);
}

.screen-text::-webkit-scrollbar-thumb {
    background-color: var(--clr-scrollbar-thumb);
    border-radius: calc(var(--scrollbar-height) / 2);
}

.screen-text.small-screen {
    font-size: 3.5rem;
}

.button-pad {
    display: grid;
    grid-row: span 1;
    gap: 16px;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(5, 1fr);
    justify-items: center;
    align-items: center;
    justify-content: space-evenly;
    align-content: space-evenly;
    height: fit-content;
    padding: 4px;
}

.calc-button {
    border: none;
    border-radius: calc(var(--button-diameter) / 2);
    font-family: inherit;
    font-size: 2.8rem;
    width: var(--button-diameter);
    height: var(--button-diameter);
    margin: 0;
    padding: 0;
    transition: 
        background-color 0.5s,
        color 0.5s;
}

.double {
    grid-column: span 2;
    text-align: left;
    padding: 0 30px;
    width: 190px;
}

.numeric {
    color: var(--clr-text-light);
    background-color: var(--clr-button-numeric);
}

.numeric:hover {
    background-color: var(--clr-button-numeric-hover);
}

.numeric:active {
    background-color: var(--clr-button-numeric-active);
    transition: background-color 0.05s ease;
}

.functional {
    color: var(--clr-text-dark);
    background-color: var(--clr-button-functional);
}

.functional:hover {
    background-color: var(--clr-button-functional-hover);
}

.functional:active {
    background-color: var(--clr-button-functional-active);
    transition: background-color 0.05s ease;
}

.operator {
    color: var(--clr-text-light);
    background-color: var(--clr-button-operator);
}

.unselected:hover {
    background-color: var(--clr-button-operator-hover);
}

.selected, #btn-equals:active {
    background-color: var(--clr-button-operator-active);
    color: var(--clr-button-operator);
    transition: background-color 0.05s ease;
}

